tests/snapshots/examples_fixtures/imports__import_in_function_error.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/imports/import_in_function_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E017]: Import Scope

Import statements must be at the top of the file.

  examples/imports/import_in_function_error.flx:5:5
  |
5 |     import Modules.Math
  |     ^^^^^^^^^^^^^^^^^^^

Hint:
  Move all import statements before any other declarations.


Note: Downstream Errors Suppressed

I hid 1 later-stage diagnostic (1 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.
== stdout ==
<not executed>
